Make OperatingSystem a sealed class